# lotus-bot-public

./: .clang-format  CMakeLists.txt  README.md  TODO.md  calculator.md
cmake/: FindDPP.cmake
docs/: Calculator.md
src/: calculator.cpp  calculator.hpp  calculator_client.hpp  calculator_constants.hpp  commands.cpp  commands.hpp  dummy_main.cpp  feet.cpp  feet.hpp  global.hpp  main.cpp  poll.cpp  poll.hpp  poll_helper.cpp  poll_helper.hpp  scheduler.cpp  scheduler.hpp  shin.cpp  shin.hpp
src/calculator/: calculator.cpp  calculator.hpp  calculator_constants.hpp  calculator_interactions.hpp  calculator_interface.cpp  calculator_interface.hpp  calculator_interface_control_flow.cpp  calculator_states.hpp  calculator_types.hpp
